[package]
name = "movement_test_tool"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = ""
termion = ""
gilrs = ""
rppal = ""
crossbeam = ""
parking_lot = ""